--- a/-- 66. Custom notifications/index.html
+++ b/-- 66. Custom notifications/index.html
@@ -16,6 +16,9 @@
       <button class="btn btn-warning">Show Alert</button>
 
       <div class="alert">
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
         <i class="fas fa-exclamation-circle"></i>
         <span class="msg">Alert: This is a Danger Alert</span>
         <div class="close-btn">
