--- a/-- 78. Card Payment ui-ux/index.html
+++ b/-- 78. Card Payment ui-ux/index.html
@@ -17,7 +17,7 @@
           <!-- Header -->
           <div class="header">
             <h1 class="logo">Pay</h1>
-            <p>ZinoTrust</p>
+            <p>KroutaTrust</p>
           </div>
           <!-- Content -->
           <div class="content">
